<resources>
    <string name="sceyt_empty_string" translatable="false" />
    <string name="sceyt_chat_notifications_channel_id" translatable="false">sceyt_chat_channel_id</string>
    <string name="sceyt_file_transfer_notifications_channel_id" translatable="false">sceyt_file_transfer_channel_id</string>
    <string name="sceyt_chat_notifications_channel_name">Chat Messages</string>
    <string name="sceyt_file_transfer_notifications_channel_name">Upload Attachments</string>
    <string name="sceyt_search_for_channels">Search for channels</string>
    <string name="sceyt_search">Search</string>
    <string name="sceyt_global_search_hint">Search</string>
    <string name="sceyt_your_last_message">You</string>
    <string name="sceyt_copy">Copy</string>
    <string name="sceyt_no_channels">No Chats yet</string>
    <string name="sceyt_message">Message</string>
    <string name="sceyt_messages">Messages</string>
    <string name="sceyt_online">online</string>
    <string name="sceyt_members_count">%1$s members</string>
    <string name="sceyt_member_count">%1$s member</string>
    <string name="sceyt_subscribers_count">%1$s subscribers</string>
    <string name="sceyt_subscriber_count">%1$s subscriber</string>
    <string name="sceyt_hint_channel_subject">Subject</string>
    <string name="sceyt_add_members">Add members</string>
    <string name="sceyt_add_subscribers">Add subscribers</string>
    <string name="sceyt_add_admins">Add admins</string>
    <string name="sceyt_edited">edited</string>
    <string name="sceyt_message_was_deleted">Message was deleted.</string>
    <string name="sceyt_message_self_destructed">Message self-destructed</string>
    <string name="sceyt_today">Today</string>
    <string name="sceyt_clear_history">Clear history</string>
    <string name="sceyt_members">Members</string>
    <string name="sceyt_subscribers">Subscribers</string>
    <string name="sceyt_set_owner">Set Owner</string>
    <string name="sceyt_change_role">Change role</string>
    <string name="sceyt_block_and_kick_member">Block and kick member</string>
    <string name="sceyt_you">You</string>
    <string name="sceyt_take_photo">Take photo</string>
    <string name="sceyt_take_video">Take video</string>
    <string name="sceyt_upload_from_gallery">Upload from Gallery</string>
    <string name="sceyt_file">File</string>
    <string name="sceyt_cancel">Cancel</string>
    <string name="sceyt_edit_message">Edit message</string>
    <string name="sceyt_join">Join</string>
    <string name="sceyt_attachment">Attachment</string>
    <string name="sceyt_react">React</string>
    <string name="sceyt_add">Add</string>
    <string name="sceyt_add_small_case">add</string>
    <string name="sceyt_remove">Remove</string>
    <string name="sceyt_reply">Reply</string>
    <string name="sceyt_reply_in_thread">Reply in thread</string>
    <string name="sceyt_replies">Replies</string>
    <string name="sceyt_thread_reply">Thread reply</string>
    <string name="sceyt_with">with %s</string>
    <string name="sceyt_ui_channel_list_empty">No results</string>
    <string name="sceyt_ui_channel_list_empty_desc">There were no results found.</string>
    <string name="sceyt_messages_list_empty">No messages yet</string>
    <string name="sceyt_no_proper_app_to_open_file">You may not have a proper app for viewing this content</string>
    <string name="sceyt_mark_as_read">Mark as read</string>
    <string name="sceyt_mark_as_unread">Mark as unread</string>
    <string name="sceyt_block">Block</string>
    <string name="sceyt_block_and_leave_channel">Block and leave channel</string>
    <string name="sceyt_empty_channels_description">You have no created channels yet, create one for sending messages.</string>
    <string name="sceyt_save">Save</string>
    <string name="sceyt_edit">Edit</string>
    <string name="sceyt_media">Media</string>
    <string name="sceyt_files">Files</string>
    <string name="sceyt_links">Links</string>
    <string name="sceyt_clear">Clear</string>
    <string name="sceyt_delete_message_title">Delete message</string>
    <string name="sceyt_delete_messages_title">Delete messages</string>
    <string name="sceyt_delete_message_body">Are you sure you want to delete this message?</string>
    <string name="sceyt_delete_messages_body">Are you sure you want to delete these messages?</string>
    <string name="sceyt_clear_history_title">Clear history</string>
    <string name="sceyt_clear_direct_history_desc">Once you clear the history, the messages in this chat will be permanently removed for you.</string>
    <string name="sceyt_clear_private_chat_history_desc">Once you clear the history it will be permanently removed for you.</string>
    <string name="sceyt_clear_public_chat_history_desc">Once you clear the history, the messages in this channel will be permanently removed for all the subscribers.</string>
    <string name="sceyt_leave_group_title">Leave group</string>
    <string name="sceyt_leave_group_desc">Once you leave this group it will be removed for you along with its entire history.</string>
    <string name="sceyt_leave_channel_title">Leave channel</string>
    <string name="sceyt_leave_channel_desc">Once you leave this channel it will be removed for you along with its entire history.</string>
    <string name="sceyt_block_user_title">Block user</string>
    <string name="sceyt_block_user_desc">Blocking a user will prevent them from sending you messages, calls, adding you to groups and channels.</string>
    <string name="sceyt_delete_p2p_title">Delete chat</string>
    <string name="sceyt_delete_p2p_desc">Once you delete this chat, it will be removed from the chat list with its message history.</string>
    <string name="sceyt_delete_group_title">Delete group</string>
    <string name="sceyt_delete_group_desc">Once you delete this group it will be permanently removed along with its entire history for all the group members.</string>
    <string name="sceyt_delete_channel_title">Delete channel</string>
    <string name="sceyt_delete_channel_desc">Once you delete this channel it will be permanently removed along with its entire history for all the channel subscribers.</string>
    <string name="sceyt_leave_channel">Leave channel</string>
    <string name="sceyt_leave">Leave</string>
    <string name="sceyt_leave_small_case">leave</string>
    <string name="sceyt_accept">Accept</string>
    <string name="sceyt_delete">Delete</string>
    <string name="sceyt_delete_chat">Delete chat</string>
    <string name="sceyt_delete_group">Delete group</string>
    <string name="sceyt_delete_channel">Delete channel</string>
    <string name="sceyt_kick_member">Kick member</string>
    <string name="sceyt_unblock">Unblock</string>
    <string name="sceyt_no_media_title">No media</string>
    <string name="sceyt_no_media_desc">Shared media will appear here.</string>
    <string name="sceyt_no_files_title">No files</string>
    <string name="sceyt_no_files_desc">Shared files will appear here.</string>
    <string name="sceyt_no_voices_title">No voice messages</string>
    <string name="sceyt_no_voices_desc">Shared voice messages will appear here.</string>
    <string name="sceyt_no_links_title">No links</string>
    <string name="sceyt_no_links_desc">Shared links will appear here.</string>
    <string name="sceyt_no_common_groups_title">No groups is common</string>
    <string name="sceyt_no_common_groups_desc">Groups in common will appear here.</string>
    <string name="sceyt_history_was_successfully_cleared">History was successfully cleared!</string>
    <string name="sceyt_auto_delete">Auto-Delete Messages</string>
    <string name="sceyt_1_day">1 day</string>
    <string name="sceyt_1_week">1 week</string>
    <string name="sceyt_1_month">1 month</string>
    <string name="sceyt_off">Off</string>
    <string name="sceyt_mute_chat">Mute chat:</string>
    <string name="sceyt_for_1_hour">For 1 hour</string>
    <string name="sceyt_for_8_hours">For 8 hours</string>
    <string name="sceyt_mute_forever">Forever</string>
    <string name="sceyt_mute_notifications">Mute notifications</string>
    <string name="sceyt_typing">typing</string>
    <string name="sceyt_typing_">typing…</string>
    <string name="sceyt_minutes_ago">minutes ago</string>
    <string name="sceyt_yesterday_at">Yesterday at</string>
    <string name="sceyt_at">at</string>
    <string name="sceyt_1_min_ago">1 minute ago</string>
    <string name="sceyt_last_seen">last seen</string>
    <string name="sceyt_new_messages">New Messages</string>
    <string name="sceyt_gallery">Gallery</string>
    <string name="sceyt_this_unsupported_file_format">This file format is not supported</string>
    <string name="sceyt_unsupported_file_format">file format is not supported</string>
    <string name="sceyt_you_can_select_max">You can select max</string>
    <string name="sceyt_video">Video</string>
    <string name="sceyt_image">Image</string>
    <string name="sceyt_voice">Voice</string>
    <string name="sceyt_you_blocked_this_user">You blocked this user</string>
    <string name="sceyt_could_not_open_file">Could\'t open file</string>
    <string name="sceyt_block_user">Block user</string>
    <string name="sceyt_mute">mute</string>
    <string name="sceyt_un_mute">unmute</string>
    <string name="sceyt_more">more</string>
    <string name="sceyt_audio">audio</string>
    <string name="sceyt_video_small_case">video</string>
    <string name="sceyt_unblock_user">Unblock user</string>
    <string name="sceyt_admins">Admins</string>
    <string name="sceyt_description">Description</string>
    <string name="sceyt_about">About</string>
    <string name="sceyt_leave_group">Leave group</string>
    <string name="sceyt_call">call</string>
    <string name="sceyt_revoke_admin">Revoke admin</string>
    <string name="sceyt_revoke">Revoke</string>
    <string name="sceyt_remove_subscriber_title">Remove subscriber</string>
    <string name="sceyt_remove_subscriber_desc">Are you sure to remove %s from this channel?</string>
    <string name="sceyt_remove_member_title">Remove member</string>
    <string name="sceyt_remove_member_desc">Are you sure to remove %s from this group?</string>
    <string name="sceyt_revoke_admin_title">Revoke admin</string>
    <string name="sceyt_revoke_admin_desc">Are you sure you want to revoke “Admin” rights from user: %s?</string>
    <string name="sceyt_forward">Forward</string>
    <string name="sceyt_saved">Saved</string>
    <string name="sceyt_share">Share</string>
    <string name="sceyt_show_in_chat">Show in chat</string>
    <string name="sceyt_media_cannot_save_to_gallery">Cannot save file to gallery. Check permission and allow app to access storage</string>
    <string name="sceyt_deleted_user">Deleted User</string>
    <string name="sceyt_share_with">Share with</string>
    <string name="sceyt_write_a_message">Write a message…</string>
    <string name="sceyt_shara_max_item_count">You are allowed to send a maximum of 20 files.</string>
    <string name="sceyt_share_max_chats_count">You are allowed to send a message to a maximum of 5 chats.</string>
    <string name="sceyt_photo">Photo</string>
    <string name="sceyt_mute_">Mute</string>
    <string name="sceyt_un_mute_">Unmute</string>
    <string name="sceyt_info">Info</string>
    <string name="sceyt_pin_chat">Pin chat</string>
    <string name="sceyt_un_pin_chat">Unpin chat</string>
    <string name="sceyt_report_channel">Report channel</string>
    <string name="sceyt_retract_vote">Retract vote</string>
    <string name="sceyt_end_vote">End vote</string>
    <string name="view_once_messages_title">View once messages</string>
    <string name="view_once_messages_desc">Any photo, video, or voice message you send will disappear from the chat after it\'s been opened. To keep your content private, recipients won\'t be able to share, forward, copy, save, or take screenshots.</string>
    <string name="sceyt_ok">Ok</string>
</resources>