<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_auto_delete"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/mediumTextSize"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/deleteOneDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?selectableItemBackground"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_1_day"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/mediumTextSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/deleteOneWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_1_week"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/mediumTextSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/deleteOneMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_1_month"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/mediumTextSize" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/deleteOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:paddingHorizontal="18dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_off"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/mediumTextSize" />

</androidx.appcompat.widget.LinearLayoutCompat>