<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/sceyt_ic_pin"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingHorizontal="23dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_pin_chat"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/unPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/sceyt_ic_un_pin"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingHorizontal="23dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_un_pin_chat"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/unBlockUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/sceyt_ic_un_block"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingHorizontal="23dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_unblock_user"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/_12ssp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/blockUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/sceyt_ic_block"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingHorizontal="23dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_block_user"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/clearHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/sceyt_ic_clear_history"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingHorizontal="23dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_clear_history"
        android:textColor="@color/sceyt_color_text_primary"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/sceyt_ic_trash"
        android:drawablePadding="15dp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingHorizontal="23dp"
        android:paddingVertical="10dp"
        android:text="@string/sceyt_delete_chat"
        android:textColor="@color/sceyt_color_error"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

</androidx.appcompat.widget.LinearLayoutCompat>